# hexbee-forensics

./: .gitattributes  .gitignore  JOURNAL.md  LICENSE  README.md  SECURITY.md  try-hexbee.ps1
comb/: pyproject.toml
comb/hexbee_comb/: __init__.py  analysis.py  browser.py  carver.py  cli.py  diskimage.py  exif.py  inventory.py  magic.py  tsk.py  webui.py
docs/: API.md  ARCHITECTURE.md  COMB.md  DEPLOYMENT.md  FIELD-GUIDE.md  FORENSICS.md  HARDWARE.md  INSTALL.md  OVERVIEW.md
forager/: README.md  pyproject.toml
forager/hexbee_forager/: __init__.py  __main__.py  agent.py  cli.py  collectors.py
forager/systemd/: hexbee-forager.service
forager/usb/: RUN-WINDOWS.bat  USB-README.txt  build_windows.ps1  entry.py  forager.example.json  run-linux.sh
hardware/photos/: README.md
hive/: install.sh  pyproject.toml  requirements.txt
hive/hexbee_hive/: __init__.py  ai.py  api.py  auth.py  cases.py  cli.py  config.py  correlate.py  db.py  evidence_export.py  ingest.py  integrity.py  ioc.py  maps.py  normalize.py  ops.py  reference.py  reports.py  search.py  security.py  store.py  timeline.py
hive/hexbee_hive/static/: manifest.webmanifest
hive/hexbee_hive/templates/: admin.html  assistant.html  audit.html  base.html  case.html  cases.html  collect.html  dashboard.html  devices.html  error.html  exported.html  field.html  field_uploaded.html  incident.html  incidents.html  iocs.html  label.html  login.html  map.html  reference.html  reference_doc.html  search.html
hive/systemd/: hexbee-engine.service  hexbee-web.service
queen/: pyproject.toml  setup-kali.sh
queen/hexbee_queen/: __init__.py  cli.py  client.py
scout/firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
scout/firmware/main/: CMakeLists.txt  Kconfig.projbuild  event_buffer.c  event_buffer.h  scout_main.c  usb_watch.c  usb_watch.h
scout/simulator/: scout_sim.py
scripts/: demo_seed.py
tests/: conftest.py  test_api.py  test_comb.py  test_core.py  test_field_features.py  test_forager.py  test_ioc.py  test_security.py  test_ui.py
